[package]
name = "rusty-stitcher"
version = "0.1.0"
edition = "2021"

[dependencies]
kernel32-sys = "0.2.2"
sysinfo = "0.32"
reqwest = { version = "0.12.8", features = ["blocking"] }
winapi = { version = "0.3.9", features = ["winnt"] }

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
strip = true        # Strip symbols from binary
