[package]
name = "RustyStitcher"
version = "0.1.0"
edition = "2021"

[dependencies]
kernel32-sys = "0.2.2"
bytes = "1.4.0"
sysinfo = "0.29.10"
reqwest = { version = "0.12.5", features = ["blocking"] }
winapi = { version = "0.3.9", features = ["winnt"] }
clap = { version = "4.5.20", features = ["derive"] }
aes = "0.7.0"
obfstr = "0.4.4"
block-modes = "0.8.0"
block-padding = "0.3"
flate2 = "1.0.35"
region = "3.0.2"
cbc = "0.1.2"
named-lock = "0.4.1"

[profile.release]
opt-level = 'z'   # Optimize for size
lto = true        # Enable link-time optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations
strip = true      # Strip symbols from binary
